tests/snapshots/ebook_golden_tests__check_scenario@kindle_hq__OEBPS__Text__chapter-1__cb-0003-cb-x.xhtml.snap
---
source: tests/ebook_golden_tests.rs
expression: payload
---
<?xml version="1.0" encoding="UTF-8"?>
<!DOCTYPE html>
<html xmlns="http://www.w3.org/1999/xhtml" xmlns:epub="http://www.idpf.org/2007/ops">
<head>
<title>cb-0003-cb-x</title>
<link href="../style.css" type="text/css" rel="stylesheet"/>
<meta name="viewport" content="width=66, height=100"/>
</head>
<body style="background-color:#000000;">
<div style="text-align:center;">
<div style="display:none;">.</div>
<img width="100" height="150" src="../../Images/chapter-1/cb-0003-cb-x.jpg"/>
</div>
<div id="PV">
</div>
</body>
</html>
<EOF: newline>
